# crates/router/src/connector/adyen/transformers.rs
@@ -261,6 +261,7 @@ pub enum AdyenPaymentMethod<'a> {
     AdyenPaypal(Box<AdyenPaypal>),
     AfterPay(Box<AdyenPayLaterData>),
     AliPay(Box<AliPayData>),
+    AliPayHk(Box<AliPayHkData>),
     ApplePay(Box<AdyenApplePay>),
     BancontactCard(Box<BancontactCardData>),
     Blik(Box<BlikRedirectionData>),
@@ -605,6 +606,12 @@ pub struct AliPayData {
 }
 
 #[derive(Debug, Clone, Serialize, Deserialize)]
+pub struct AliPayHkData {
+    #[serde(rename = "type")]
+    payment_type: PaymentType,
+}
+
+#[derive(Debug, Clone, Serialize, Deserialize)]
 pub struct AdyenGPay {
     #[serde(rename = "type")]
     payment_type: PaymentType,
@@ -657,6 +664,7 @@ pub enum PaymentType {
     Affirm,
     Afterpaytouch,
     Alipay,
+    AlipayHk,
     Applepay,
     Blik,
     Eps,
@@ -1077,6 +1085,12 @@ impl<'a> TryFrom<&api::WalletData> for AdyenPaymentMethod<'a> {
                     payment_type: PaymentType::Alipay,
                 };
                 Ok(AdyenPaymentMethod::AliPay(Box::new(alipay_data)))
+            }
+            api_models::payments::WalletData::AliPayHkRedirect(_) => {
+                let alipay_hk_data = AliPayHkData {
+                    payment_type: PaymentType::AlipayHk,
+                };
+                Ok(AdyenPaymentMethod::AliPayHk(Box::new(alipay_hk_data)))
             }
             api_models::payments::WalletData::MbWayRedirect(data) => {
                 let mbway_data = MbwayData {
