# openapi/openapi_spec.json
@@ -1793,6 +1793,9 @@
       "AliPayRedirection": {
         "type": "object"
       },
+      "AliPayHkRedirection": {
+        "type": "object"
+      },
       "AmountInfo": {
         "type": "object",
         "required": [
@@ -7865,6 +7868,17 @@
             "properties": {
               "ali_pay": {
                 "$ref": "#/components/schemas/AliPayRedirection"
+              }
+            }
+          },
+          {
+            "type": "object",
+            "required": [
+              "ali_pay_hk"
+            ],
+            "properties": {
+              "ali_pay_hk": {
+                "$ref": "#/components/schemas/AliPayHkRedirection"
               }
             }
           },
